Add API builds and routing to vercel.json
- Added @vercel/node build for api/**/*.js files
- Added explicit /api/* routing BEFORE other routes
- Keep static files routing intact (no changes to working page)

--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,17 @@
     {
       "src": "styles.css",
       "use": "@vercel/static"
+    },
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
     {
       "src": "/",
       "dest": "/index.html"
